modified:   color.ini

--- a/color.ini
+++ b/color.ini
@@ -14,4 +14,4 @@ pressing_button_bg                    = 586569
 selected_button                       = 009688
 miscellaneous_bg                      = 16A085
 miscellaneous_hover_bg                = FF0000
-preserve_1                            = 245D9E 
+preserve_1                            = 02AEBC 
